EZ-4180: mobile - login and wizard step2 - spacing issues

--- a/App/PluginWeb/EzBob.Web/Content/css/everline-mobile.css
+++ b/App/PluginWeb/EzBob.Web/Content/css/everline-mobile.css
@@ -585,7 +585,10 @@
 	}
 
 	.form_field_container.control-group.customer-logon-remember-me .input-title,
-	.wizard-inner-wrap .clearfix .form_buttons_container .input-title{
+	.form_field_container.control-group.form_read_and_accept .input-title,
+	.wizard-inner-wrap .clearfix .form_buttons_container .input-title,
+	.simple-login .form_buttons_container .input-title,
+	.PersonalDetailsForm  .form_buttons_container .input-title {
 		display: none;
 	}
 
